--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: BootCamp 2021
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ master ]
+    branches: [ main ]
+
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -17,25 +21,26 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2-beta
-      with: 
-        version: 12
-        
-    - name: GitHub Action for Yarn
-      uses: Borales/actions-yarn@v2.1.0
-      with:
+      # Runs a single command using the runners shell
+      - name: Installing Node
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 12
+      - name: GitHub Action for Yarn
+        uses: Borales/actions-yarn@v2.1.0
+        with:
         # Yarn command
-        cmd: install # npm install/ yarn install
+          cmd: install # npm install/ yarn install
     
-    - name: Creating build
-      run: yarn build
-    
-    - name: installing surge  
-      run: npm install -g surge
-    
-    - name: deploying on surge
-      run: surge ./build http://bootcamp-03.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      - name: Creating build
+        run: yarn build
+
+      # Runs a set of commands using the runners shell
+      - name: Installing Surge
+        run: npm install --global surge
+        
+      - name: Deploying using surge
+        run: surge ./ bootcamp-2021-1.surge.sh --token ${{secrets.SURGE_TOKEN}}
