--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: Borales/actions-yarn@v2.1.0
         with:
         # Yarn command
-          cmd: npm install --global yarn # npm install/ yarn install
+          cmd: install --global yarn # npm install/ yarn install
     
       - name: Creating build
         run: yarn build
