--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,11 @@ jobs:
         uses: Borales/actions-yarn@v2.1.0
         with:
         # Yarn command
-          cmd: install --global yarn # npm install/ yarn install
-    
+          cmd: install # npm install/ yarn install
+        
+      - name: adding yarn
+      - run: yarn global add yarn
+      
       - name: Creating build
         run: yarn build
 
