--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: BootCamp 2021
+name: BootCamp-03
 
 # Controls when the workflow will run
 on:
@@ -30,20 +30,22 @@ jobs:
         with:
           node-version: 12
       - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@v2.1.0
+      # You may pin to the exact commit or the version.
+      # uses: Borales/actions-yarn@4965e1a0f0ae9c422a9a5748ebd1fb5e097d22b9
+        uses: Borales/actions-yarn@v2.3.0
         with:
-        # Yarn command
-          cmd: install # npm install/ yarn install
-        
-      - name: adding yarn
-        run: yarn global add yarn
+          cmd: install
       
-      - name: Creating build
-        run: yarn build
+      - name: Building Yarn
+      # You may pin to the exact commit or the version.
+      # uses: Borales/actions-yarn@4965e1a0f0ae9c422a9a5748ebd1fb5e097d22b9
+        uses: Borales/actions-yarn@v2.3.0
+        with:
+          cmd: yarn build
 
       # Runs a set of commands using the runners shell
       - name: Installing Surge
         run: npm install --global surge
         
       - name: Deploying using surge
-        run: surge ./ bootcamp-2021-1.surge.sh --token ${{secrets.SURGE_TOKEN}}
+        run: surge ./build http://bootcamp-03.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
