--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       # uses: Borales/actions-yarn@4965e1a0f0ae9c422a9a5748ebd1fb5e097d22b9
         uses: Borales/actions-yarn@v2.3.0
         with:
-          cmd: yarn build
+          cmd: build
 
       # Runs a set of commands using the runners shell
       - name: Installing Surge
